edit: config settings (works correctly)